+=========================================================+
   ShopXO 1.9.0 Release --- http://shopxo.net
+=========================================================+
全局
	1. 积分支持按照订单商品总额比例发放，发生售后收回积分
	2. 微信小程序好物推荐和直播组件支持配置组件版本号
	3. 支持商品自定义销售类型（销售模式、展示模式、自提模式、虚拟销售模式、销售+自提模式）
	4. 商品管理去除库存的配置，移动到独立库存中管理
	5. 新增仓库管理，仓库商品库存管理（多仓库、多库存）
	6. 新增 Ipay88 支付方式
	7. 订单新增批量合并支付
	8. 支付日志、退款日志、用户消息优化
	9. 商品封面图片优化
	10. 搜索支持空格多个关键字

web端
	1. 所有条件、数据列表、新增、编辑、删除 新增钩子（公共 form 表单封装）
	2. 后台管理登录页面新增随机背景（支持关闭）
	3. 商品编辑规格新增选中光标，用于数据太多定位操作位置
	4. 后端新增用户商品浏览管理
	5. 后端新增用户商品收藏管理
	6. 支付插件支持自定义输出成功/失败内容
	7. 支付插件管理优化适配平台，编辑不可超出插件定义的适配平台
	8. 用户积分实时获取
	9. 管理员新增状态
	10. 后台左侧菜单优化，更简洁方便，小程序管理集合
	11. 后台新增商品复制功能
	12. 后台小程序配置集中管理
	13. 品牌支持关联多个分类
	14. 首页轮播支持电话、地图事件方式


小程序端
	1. 支持商品自定义销售类型模式

插件
	1. 分销插件新增返积分模块、海报高清
	2. 会员等级推广海报高清
	3. 运费插件支持单独每一个仓库独立配置
	


+=========================================================+
   ShopXO 1.8.1 Release 20200420 http://shopxo.net
+=========================================================+
全局
	1. 优购返现
	2. 微信小程序直播
	3. 购物车商品删除造成数据错误修复
	4. 商品评论字符串截取错误修复
	5. 更多细节优化以及BUG修复
	6. 部分常用数据新增缓存、提升响应速度

web端
	1. 后台数据列表布局优化、支持操作栏浮动

小程序端
	1. 优购返现
	2. 微信小程序直播
	3. 分享组件增强
	4. 部分细节优化以及BUG修复

插件
	1. 优购返现
	2. 极速下单
	3. 微信小程序直播
	4. 订单导出打印
	5. 订单改价


+=========================================================+
   ShopXO 1.8.0 Release 20200202 http://shopxo.net
+=========================================================+
全局
	1. 新增站点模式（销售模式、展示模式、自提模式、虚拟销售模式、销售+自提模式）
	2. 商品详情展示相册
	3. 会员等级插件增强版适配小程序
	4. 分销插件重构适配小程序
	5. 更多细节优化以及BUG修复

web端
	1. 支持手机访问H5首页banner自动切换
	2. 优化手机访问底部简洁模式
	3. 商品分类优化（支持图片展示，布局更清晰）

小程序端
	1. 微信小程序客服新增卡片（可直接发送商品详情给客服）
	2. 支付宝小程序新增在线客服
	3. 登录机制优化（非首次用户自动无感应登录，登录失效自动登录）
	4. 地址添加优化（从后面选择地区则提示，提升用户体验）
	5. 新增分销插件支持
	6. 新增会员等级增强版插件支持
	7. 新增钱包插件支持
	8. 头条小程序新增在线客服

插件
	1. 分销插件优化（新增自提点，佣金结算模式优化，佣金配置具体到规格）适配小程序
	2. 会员等级增强版插件优化（新增付费购买、三级返佣/会员裂变）适配小程序
	3. 钱包插件优化（赠送金额可配置不可提现）适配小程序
	4. 新增货币转换
	5. 新增简<—>繁多语言


+=========================================================+