@@ -78,7 +78,7 @@
 				            <div class="am-form-group">
 				                <label>{{$data.common_app_weixin_liveplayer_ver.name}}</label>
 				                <div class="am-alert am-alert-warning">
-				                    <p>1. 获取最新组件版本号，默认[ 1.0.18 ]</p>
+				                    <p>1. 获取最新组件版本号，默认[ 1.1.4 ]</p>
 				                    <p>2. 登录微信小程序平台，左侧导航[ 直播 ]，申请直播权限后等待审核通过方可使用</p>
 				                    <p>3. 点击左侧导航[ 小程序直播->接入说明 ]，找到[ 使用方法说明->1. 【直播组件】如何引入 ]，json 代码串[ plugins->live-player-plugin ]参数下的[ version ]的值填入</p>
 				                    <a href="https://developers.weixin.qq.com/miniprogram/dev/framework/liveplayer/live-player-plugin.html" target="_blank">去获取组件版本号 <i class="am-icon-external-link"></i></a>
