@@ -1,1 +1,2 @@
 plugins_*
+goods_qrcode
