@@ -1,5 +1,5 @@
 +=========================================================+
-   ShopXO 1.9.0 Release --- http://shopxo.net
+   ShopXO 1.9.0 Release 20200818 http://shopxo.net
 +=========================================================+
 全局
 	1. 积分支持按照订单商品总额比例发放，发生售后收回积分
@@ -12,6 +12,7 @@
 	8. 支付日志、退款日志、用户消息优化
 	9. 商品封面图片优化
 	10. 搜索支持空格多个关键字
+	11. 商品分类支持1~3级自由配置展示
 
 web端
 	1. 所有条件、数据列表、新增、编辑、删除 新增钩子（公共 form 表单封装）
@@ -28,6 +29,7 @@ web端
 	12. 后台小程序配置集中管理
 	13. 品牌支持关联多个分类
 	14. 首页轮播支持电话、地图事件方式
+	15. 商品详情二维码改为静态、更容易适配各种服务器环境
 
 
 小程序端
@@ -35,7 +37,7 @@ web端
 
 插件
 	1. 分销插件新增返积分模块、海报高清
-	2. 会员等级推广海报高清
+	2. 微信小程序直播分享海报高清
 	3. 运费插件支持单独每一个仓库独立配置
 	
 
